--- a/app/views/forecast/index.html.erb
+++ b/app/views/forecast/index.html.erb
@@ -1,14 +1,5 @@
 <h1>Forecast#index</h1>
 <p>Find me in app/views/forecast/index.html.erb</p>
 
-<%= form_with url: '/forecast' do |form| %>
-  <% fields = [:street, :city, :state, :zip] %>
-  <% fields.each do |field| %>
-    <fieldset>
-      <%= form.label field, field.to_s.titleize %>
-      <%= form.text_field field %>
-    </fieldset>
-  <% end %>
+<%= react_component('address_form/AddressForm') %>
 
-  <%= form.submit "Search" %>
-<% end %>
